welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: not found: value max
  {if (max<nums(i)){max2=max;max=nums(i)}
       ^max2Value:6: error: not found: value max2
  {if (max<nums(i)){max2=max;max=nums(i)}
                    ^max2Value:6: error: not found: value max
  {if (max<nums(i)){max2=max;max=nums(i)}
                             ^max2Value:7: error: not found: value max2
   else {if (max2<nums(i)){max2=nums(i)}}}
             ^max2Value:7: error: not found: value max2
   else {if (max2<nums(i)){max2=nums(i)}}}
                           ^max2Value:8: error: not found: value max2
  return max2} 
         ^